--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        ssh-key: ${{ secrets.RDKCM_DEPLOY_KEY }}
 
     - name: Set up Git
       run: |
@@ -27,5 +29,3 @@ jobs:
         git add test.txt
         git commit -m "Update test.txt with current date"
         git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
