--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -8,7 +8,7 @@ on:
   issue_comment:
     types: [created]
   pull_request_target:
-    types: [opened,synchronize]
+    types: [opened,closed,synchronize]
 
 jobs:
   CLA-Lite:
